--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "scripts": {
     "serve": "npx reload -d src",
-    "lint": "npx htmllint && npx csslint && npx eslint",
+    "htmlhint": "npx htmlhint",
+    "csslint": "npx csslint src",
+    "eslint": "npx eslint src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
